--- a/index.html
+++ b/index.html
@@ -1,9 +1,21 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
-<head><title>Nova Dashboard</title></head>
+<head>
+  <meta charset="UTF-8" />
+  <title>Cineverse Movie Portal – V6</title>
+  <link rel="stylesheet" href="../styles.css" />
+</head>
 <body>
-<button id="novaButton">Run Nova</button>
-<pre id="log"></pre>
+<div class="container">
+  <h1>Cineverse Movie Portal – V6</h1>
+  <p>Clean minimal layout.</p>
+
+  <button onclick="location.href='../index.html'">Back to Dashboard</button>
+  <br /><br />
+  <button id="novaButton">Launch & Deploy</button>
+</div>
+
 <script src="main.js"></script>
 </body>
 </html>
+
