--- a/index.html
+++ b/index.html
@@ -1,1 +1,21 @@
-<!DOCTYPE html><html><head><title>Nova Quick Engine</title><link rel='stylesheet' href='styles.css'></head><body><h1>Nova Engine Activated</h1><button id='novaButton'>Run Nova</button><pre id='out'></pre><script src='main.js'></script></body></html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <title>Nova Engine — Samantha SuperNova Universe</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="/styles.css" />
+</head>
+<body>
+  <main class="shell">
+    <h1>Nova Engine Activated</h1>
+    <p class="tagline">When you press the button, Nova triggers a fresh deploy from this dashboard.</p>
+
+    <button id="novaButton">Run Nova</button>
+
+    <div id="status" class="status"></div>
+  </main>
+
+  <script src="/main.js"></script>
+</body>
+</html>
