--- a/index.html
+++ b/index.html
@@ -1,53 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <title>Nova Engine Control</title>
-  <style>
-    body {
-      background: #000;
-      color: white;
-      font-family: Arial, sans-serif;
-      height: 100vh;
-      margin: 0;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    }
+<button onclick="runNova()">Run Nova</button>
 
-    #novaButton {
-      padding: 20px 40px;
-      font-size: 24px;
-      border-radius: 12px;
-      border: none;
-      cursor: pointer;
-      background: linear-gradient(135deg, #4e0fff, #b300ff);
-      color: white;
-      box-shadow: 0 0 20px #b300ff;
-      transition: 0.2s;
-    }
+<script>
+async function runNova() {
+  const res = await fetch("/api/deploy", {
+    method: "POST"
+  });
 
-    #novaButton:hover {
-      transform: scale(1.05);
-      box-shadow: 0 0 30px #ff4ee0;
-    }
-
-    #status {
-      position: absolute;
-      bottom: 40px;
-      left: 50%;
-      transform: translateX(-50%);
-      font-size: 20px;
-      opacity: 0.8;
-    }
-  </style>
-</head>
-
-<body>
-
-  <button id="novaButton">🚀 Launch Nova</button>
-  <div id="status">Waiting for command…</div>
-
-  <script src="main.js"></script>
-</body>
-</html>
+  const data = await res.json();
+  alert(JSON.stringify(data));
+}
+</script>
